# workshop-cicd-k8s-deployment

./: .gitignore  CLAUDE.md  LICENSE  README.md  WORKSHOP_GUIDE.md  answers.md  go.mod  plan.md
activities/: approval.go  docker.go  kubernetes.go  monitoring.go
cmd/starter/: main.go
docs/: demo1-guide.md  demo2-guide.md  demo4-guide.md  part-3-guide.md  part-4-guide.md  resiliancy-guide.md
python-activities/: README.md  pyproject.toml
python-activities/src/: models.py  worker.py
python-activities/src/activities/: kubernetes.py
sample-app/: Dockerfile  go.mod  integration_test.go  main.go  main_test.go
sample-app/k8s/: production-deployment.yaml  service.yaml  staging-deployment.yaml
sample-app/tests/: integration_test.py
setup/: cleanup.sh  setup-k8s.sh
shared/: types.go  utils.go
typescript-activities/: README.md  package-lock.json  package.json  tsconfig.json
typescript-activities/src/: types.ts  worker.ts
typescript-activities/src/activities/: approval.ts
workers/: main.go
workflows/: pipeline.go
